# tour-de-france

./: .dockerignore  .env.example  .gitignore  Pipfile  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
TourDeFrance/: settings.py  urls.py  wsgi.py
_docker/: .env.dev  Dockerfile  deploy_new_image.sh  docker-compose.yml  helper-commands.txt
_project/: settings.py  urls.py
apps/game/: models.py
apps/games/: admin.py  models.py  urls.py
apps/games/fixtures/: tour_2023_games_users.json  tour_2023_games_users_v2.json
apps/games/migrations/: 0001_initial.py  0002_initial.py
apps/games/repositories/: score_tables.py
apps/games/services/: calculate_scores.py
apps/races/: admin.py  models.py  urls.py  views.py
apps/races/fixtures/: tour_2023.json
apps/races/migrations/: 0001_initial.py
apps/races/services/: results.py
apps/users/migrations/: 0001_initial.py
backups/: backup_20230712.tar  backup_20230714.tar  backup_20230715.tar  restore_db.sh
docker/: Dockerfile  docker-compose.yml
src/: manage.py  settings.py  urls.py  wsgi.py
src/_project/: settings.py  urls.py
src/_project/templates/: base.html
src/apps/: TODO
src/apps/game/: admin.py  forms.py  models.py  views.py
src/apps/games/: admin.py  models.py  urls.py  views.py
src/apps/gebruikers/: admin.py  models.py
src/apps/races/: admin.py  models.py  urls.py  views.py
src/apps/users/: admin.py  forms.py  models.py  urls.py  views.py
src/scripts/: predeploy.sh
static/templates/: base.html  renner_form.html  renners.html
(+32 files in other folders)
