[tool.poetry]
name = "tourdefrance"
version = "0.1.0"
description = "A tour de france game app"
authors = ["Stefan van der Zanden <stefan.vanderzanden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg2-binary = "^2.9"
django-countries = "^7.5"
requests = "^2.31"
beautifulsoup4 = "^4.12"
django-polymorphic = "^3.1"
django-tailwind = "^3.6"

[tool.poetry.dev-dependencies]
black = "^23.7"
cookiecutter = "^2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
